--- a/src/index.html
+++ b/src/index.html
@@ -92,21 +92,74 @@
                 <!-- /ko -->
             </ul>
         </div>
-        <div class="container-fluid">
-            <div id="map">
-                Meow!!
-            </div>
+        <section id="todoapp">
+            <header id="header">
+
+                <input id="new-todo" placeholder="What needs to be done?" autofocus>
+            </header>
+            <section id="main">
+                <input id="toggle-all" type="checkbox">
+                <label for="toggle-all">Mark all as complete</label>
+                <ul id="todo-list"></ul>
+            </section>
+            <footer id="footer"></footer>
+        </section>
+        <div id="info">
+            <p>Double-click to edit a todo</p>
+            <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
         </div>
     </div>
+    <script type="text/template" id="item-template">
+        <div class="view">
+            <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
+            <label><%= title %></label>
+            <button class="destroy"></button>
+        </div>
+        <input class="edit" value="<%= title %>">
+
+    </script>
+
+    <script type="text/template" id="stats-template">
+        <span id="todo-count"><strong><%= remaining %></strong> <%= remaining === 1 ? 'item' : 'items' %> left</span>
+        <ul id="filters">
+          <li>
+            <a class="selected" href="#/">All</a>
+          </li>
+          <li>
+            <a href="#/active">Active</a>
+          </li>
+          <li>
+            <a href="#/completed">Completed</a>
+          </li>
+        </ul>
+        <% if (completed) { %>
+        <button id="clear-completed">Clear completed (<%= completed %>)</button>
+        <% } %>
+    </script>
+
+
+
 
     <script src="js/lib/jquery-2.2.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.1/backbone-min.js"></script>
+    <script src="js/lib/backbone.localStorage.js"></script>
+
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
+    <!-- BackboneFire -->
+    <script src="https://cdn.firebase.com/libs/backbonefire/0.5.1/backbonefire.min.js"></script>
+
     <script src="js/lib/jquery-ui.min.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
-    <script src="js/lib/knockout-3.4.0.js"></script>
+    <script src="js/models/todo.js"></script>
+    <script src="js/collections/todos.js"></script>
+    <script src="js/views/todos.js"></script>
+    <script src="js/views/app.js"></script>
+    <script src="js/routers/router.js"></script>
+
     <script src="js/app.js"></script>
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAG3IGYJ-z-wlGRpLr6sBEF_Ls9z4ZNDig&libraries=places&callback=googleSuccess" onerror="googleFail()">
-    </script>
+
 
 </body>
 </html>
