feat: downloaded browser-sync for 1st time-My life is forever changed
-basic model and collection set up

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/lib/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/lib/simple-sidebar.css">
     <link rel="stylesheet" href="css/lib/jquery-ui.min.css">
+     <link rel="stylesheet" href="css/old.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
