feat: basic views set up; dom updating on add

--- a/src/index.html
+++ b/src/index.html
@@ -158,8 +158,9 @@
 
     <script type="text/template" id="food-template">
         <div class="view">
-            <label><%= name %></label>
+            <label><%= foodName %></label>
             <button class="destroy"></button>
+            <span>   <%= calories %> Calories </span>
         </div>
     </script>
 
