--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Neighborhood Map Project</title>
+    <title>Health Tracker Project</title>
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="css/lib/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/lib/simple-sidebar.css">
@@ -21,7 +21,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Neighborhood Map Project</a>
+                <a class="navbar-brand" href="#">Health Tracker Project</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <div class="navbar-form navbar-right">
@@ -44,17 +44,16 @@
     </nav>
     <div id="wrapper">
         <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
+            <ul id="sidebar" class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#"> Showing you
-                        <span data-bind="text: currentTitle"></span>
-                        in Charlottesville, VA!
+                    <a href="#">
+                        Select your favorite food or search for a new food
                     </a>
                     <div class="divider"></div>
                     <p class="directions">Choose another category above or filter current results</p>
                 </li>
                 <li>
-                    <input type="text" placeholder="Type here to Filter by Name" class="form-control my-input" data-bind="textInput: currentFilter" id="autocomplete">
+                    <input type="text" placeholder="Type here to Filter by Name" class="form-control my-input" id="autocomplete">
                 </li>
                 <li class="filter-checkbox">
                     <input type='checkbox' data-bind='checked: showFilter'>
@@ -64,7 +63,7 @@
                     <span class="radio-button" data-bind="text: $data">I'm text</span>
                     <input type="radio" name="categoryGroup" data-bind="checked: $parent.categoryToShow, attr: {value: $data}">
                 </li>
-                <li class="divider"></li>
+                <li id="before-search" class="divider"></li>
                 <!--ko foreach: { data: filteredPlaces, beforeRemove: slideAway, afterRender: fade }  -->
                     <li>
                         <div class="row place-entry">
@@ -183,6 +182,7 @@
 
 
 
+
     <script src="js/lib/jquery-2.2.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.1/backbone-min.js"></script>
@@ -207,7 +207,9 @@
     <script src="js/collections/foodList.js"></script>
     <script src="js/views/foodView.js"></script>
     <script src="js/views/totalsView.js"></script>
+    <script src="js/views/sidebarView.js"></script>
     <script src="js/views/foodListView.js"></script>
+
 
     <script src="js/foodApp.js"></script>
 
