feat: new Sidebar view and new SearchList collection
-on fetch search list is getting array of search results.. woot!
-still a lot of logic needs to be added to functions

--- a/src/index.html
+++ b/src/index.html
@@ -205,6 +205,8 @@
 
     <script src="js/models/food.js"></script>
     <script src="js/collections/foodList.js"></script>
+    <script src="js/collections/searchResults.js"></script>
+
     <script src="js/views/foodView.js"></script>
     <script src="js/views/totalsView.js"></script>
     <script src="js/views/sidebarView.js"></script>
