feat: items delete on click

--- a/src/index.html
+++ b/src/index.html
@@ -159,7 +159,7 @@
     <script type="text/template" id="food-template">
         <div class="view">
             <label><%= foodName %></label>
-            <button class="destroy">Destroy</button>
+            <button class="destroy">Delete</button>
             <span>   <%= calories %> Calories </span>
         </div>
     </script>
