--- a/src/index.html
+++ b/src/index.html
@@ -210,6 +210,7 @@
     <script src="js/app.js"></script>
 
     <script src="js/models/food.js"></script>
+    <script src="js/models/images.js"></script>
     <script src="js/collections/foodList.js"></script>
     <script src="js/collections/searchResults.js"></script>
 
