feat: favorite working
-foodView now updates Favorite button
-favorites added
-search field reset

--- a/src/index.html
+++ b/src/index.html
@@ -60,10 +60,10 @@
                 <li id="before-search" class="divider"></li>
                     <div id="search-div">
                         <ul id="favorites-ul"></ul>
-                        <ul id="search-ul">
+                        <ul id="search-ul"></ul>
 
 
-                        </ul>
+
 
 
                     </div>
