refactor:  totals logic housed in new model
-creation of currentTotals model

--- a/src/index.html
+++ b/src/index.html
@@ -232,9 +232,13 @@
     <script src="js/models/food.js"></script>
     <script src="js/models/date.js"></script>
 
+
     <script src="js/collections/foodList.js"></script>
     <script src="js/collections/masterList.js"></script>
     <script src="js/collections/searchResults.js"></script>
+
+    <script src="js/models/currentTotals.js"></script>
+
 
     <script src="js/views/foodView.js"></script>
     <script src="js/views/dateView.js"></script>
