bug: add food from search directly calls close of sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -231,13 +231,17 @@
     <script src="js/models/image.js"></script>
     <script src="js/models/food.js"></script>
     <script src="js/models/date.js"></script>
+    <script src="js/models/plotPoint.js"></script>
+
 
 
     <script src="js/collections/foodList.js"></script>
     <script src="js/collections/masterList.js"></script>
     <script src="js/collections/searchResults.js"></script>
 
+
     <script src="js/models/currentTotals.js"></script>
+    <script src="js/collections/totals.js"></script>
 
 
     <script src="js/views/foodView.js"></script>
