--- a/src/index.html
+++ b/src/index.html
@@ -234,12 +234,16 @@
     <script src="js/models/food.js"></script>
     <script src="js/models/date.js"></script>
     <script src="js/models/plotPoint.js"></script>
+    <script src="js/models/name.js"></script>
+
 
 
 
     <script src="js/collections/foodList.js"></script>
     <script src="js/collections/masterList.js"></script>
     <script src="js/collections/searchResults.js"></script>
+    <script src="js/collections/autocompleteResults.js"></script>
+
 
 
     <script src="js/models/currentTotals.js"></script>
