--- a/src/index.html
+++ b/src/index.html
@@ -73,12 +73,17 @@
 
 
         <section id="foodApp">
+
             <header id="header">
-                <h1>Food App</h1>
+                <span class="cheesy-trophy">🏆</span>
+                <h1> Your Personal Nutrition Tracker!</h1>
             </header>
+            <hr>
+
             <section id="date">
 
             </section>
+            <hr>
             <section id="food-main">
                 <div class="food-list-header">
                     <h3 class="inline">Food List</h3><button class="addFood">➕</button>
@@ -190,12 +195,11 @@
 
 
     <script type="text/template" id="date-template">
-        <span class="flanking-date"><%= yesterdayDateStr %></span>
-        <button id="left-btn">〈</button>
-        <h3 class="date-in-focus inline"><%= todayInFocus ? 'Today' : focalDateStr %></h3>
-        <button id="right-btn">〉</button>
-        <span class="flanking-date"><%= tmrwDateStr %></span>
-
+            <span class="flanking-date" id="left-d"><%= yesterdayDateStr %></span>
+            <button id="left-btn">〈</button>
+            <span class="date-in-focus"><%= todayInFocus ? 'Today' : focalDateStr %></span>
+            <button id="right-btn" id="right-d">〉</button>
+            <span class="flanking-date"><%= tmrwDateStr %></span>
 
     </script>
 
