--- a/src/index.html
+++ b/src/index.html
@@ -26,19 +26,13 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <div class="navbar-form navbar-right">
-                    <div data-bind="foreach: arrayOfArrays " class="form-group btn-div">
-                        <button data-bind="click: $parent.setCurrentList.bind($data, $index()), text: $parent.buttonArray[$index()]" class="btn btn-success my-btn">CategoryButton</button>
+                    <div  class="form-group btn-div">
+                        <button class="my-btn"><a href="#summary">Add Food</a></button>
+                        <button class="my-btn"><a href="#totals">Totals</a></button>
+                        <button class="my-btn"><a href="#food-main">Food Diary</a></button>
+                        <button class="my-btn"><a href="#trends">Trends</a></button>
                     </div>
-                    <div class="radio-divider"></div>
-                    <div class="small-div">
-                        <input type="text" placeholder="Type here to Filter by Name" class="form-control my-input" data-bind="textInput: currentFilter">
-                        <div data-bind="foreach: filteredPlaces" id="small-list">
-                            <div class="row">
-                                <img src="" class="small-img-div" alt="place image" data-bind="attr: {src: photoUrl}">
-                                <a data-bind="text: name, click: $parent.setFocus, css: { longString: name.length > 21 }" class="small-place-name" href="#"></a><span data-bind="text: rating(), style: { background: rating() < 4.5 ? '#0D47A1' : '#43A047'}" class='small-rating'></span>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -85,12 +79,12 @@
             </section>
             <hr>
             <div class="row-1">
-                <section id="summary">
+                <section id="summary" class="sub-section">
 
 
 
                 </section>
-                <section class="totals" >
+                <section id="totals" class="sub-section">
                     <div class="section-header">
                         <h3>Totals!!</h3>
                     </div>
@@ -99,16 +93,16 @@
                 </section>
             </div>
              <div class="row-2">
-                <section id="food-main">
+                <section id="food-main" class="sub-section">
                     <div class="section-header">
                         <h3 class="inline">Food List</h3><button class="addFood header-btn">➕</button>
                     </div>
                     <ul id="food-list"></ul>
                     <div>
-                        <button class="addFood text-btn">Add More Food</button>
+                        <button class="addFood text-btn">Add Food</button>
                     </div>
                 </section>
-                <section id="trends">
+                <section id="trends" class="sub-section">
                     <div class="section-header">
                         <h3>Trends!!</h3>
                     </div>
@@ -309,7 +303,7 @@
 
             <h1 class="big"><%= consumed %></h1>
             <p class="sum-sub">Budget: <%= budget %></p>
-        <button class="addFood sum-btn">Add More Food</button>
+        <button class="addFood text-btn">Add Food</button>
         </div>
         <div id="donut">
             <div class="donut-text">
@@ -322,7 +316,7 @@
 
     <script type="text/template" id="trends-template">
 
-            <svg id="line-graph" class="<%= className %>"width="600" height="380"></svg>
+            <svg id="line-graph" class="<%= className %>"width="600" height="200"></svg>
             <hr>
     </script>
 
@@ -376,7 +370,6 @@
     <script src="js/views/summaryView.js"></script>
 
     <script src="js/views/foodListView.js"></script>
-
 
     <script src="js/foodApp.js"></script>
 
