--- a/src/index.html
+++ b/src/index.html
@@ -43,47 +43,33 @@
                 <li class="top-divider"></li>
                 <li class="sidebar-brand">
                     <h3 class="sidebar-title">Food Selection</h3>
-                        <button id="close">✖</button>
-
-
+                    <button id="close">✖</button>
                 </li>
-                 <li class="input-li">
-
-
+                <li class="input-li">
                     <input type="text" placeholder="Select a favorite or search for  a new food" class="form-control my-input" id="autocomplete"><button id="search">🔍</button>
                 </li>
                 <li class="divider"></li>
                 <li id="before-search">
                     <div id="search-div">
                         <ul id="favorites-ul"></ul>
-
                         <ul id="search-ul"></ul>
-
                     </div>
 
-                    <div class="divider"></div></li>
+                    <div class="divider"></div>
+                </li>
             </ul>
         </div>
-
-
-
         <section id="foodApp">
-
             <header id="header">
                 <span class="cheesy-trophy">🏆</span>
                 <h1> Your Personal Nutrition Tracker!</h1>
             </header>
             <hr>
-
             <section id="date">
             </section>
             <hr>
             <div class="row-1">
-                <section id="summary" class="sub-section">
-
-
-
-                </section>
+                <section id="summary" class="sub-section"></section>
                 <section id="totals" class="sub-section">
                     <div class="section-header">
                         <h3>Totals!!</h3>
@@ -93,7 +79,7 @@
                     </div>
                 </section>
             </div>
-             <div class="row-2">
+            <div class="row-2">
                 <section id="food-main" class="sub-section">
                     <div class="section-header">
                         <h3 class="inline">Food List</h3><button class="addFood header-btn">➕</button>
@@ -109,24 +95,11 @@
                     </div>
                     <div id="trends-view">
                     </div>
-
-
                 </section>
             </div>
-
-
-
-
-
-
-
-
-
-
-
         </section>
-
     </div>
+
     <script type="text/template" id="item-template">
         <div class="view">
             <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
@@ -134,51 +107,27 @@
             <button class="destroy"></button>
         </div>
         <input class="edit" value="<%= title %>">
-
     </script>
-
-    <script type="text/template" id="stats-template">
-        <span id="todo-count"><strong><%= remaining %></strong> <%= remaining === 1 ? 'item' : 'items' %> left</span>
-        <ul id="filters">
-          <li>
-            <a class="selected" href="#/">All</a>
-          </li>
-          <li>
-            <a href="#/active">Active</a>
-          </li>
-          <li>
-            <a href="#/completed">Completed</a>
-          </li>
-        </ul>
-        <% if (completed) { %>
-        <button id="clear-completed">Clear completed (<%= completed %>)</button>
-        <% } %>
-    </script>
-
 
     <script type="text/template" id="food-template">
-
-         <div class="row">
+        <div class="row">
             <div class="side-25">
-                <img src="<%= url %>" alt="food-image" class="food-image">
+                <img src="<%= imageUrl %>" alt="food-image" class="food-image">
                 <button class="destroy">✖</button>
             </div>
             <div class="side-75">
                 <a class="search-name" href="#"><%= foodName %></a>
-
                 <button class="star <%= favorited ? 'favorited' : '' %> ">★</button>
                 <div class="info-row-top">
-                    <div class="info-item"><%= protein %></div>
+                    <div class="info-item"><%= prot %></div>
                     <div class="info-item"><%= carb %></div>
                     <div class="info-item"><%= fat %></div>
                     <div class="info-item hide-tog"><%= sug %></div>
                     <div class="info-item hide-tog"><%= chol %></div>
-                    <div class="info-item hide-tog"><%= chol %></div>
+                    <div class="info-item hide-tog"><%= fib %></div>
                     <div class="info-cal">
                         <span class="search-calorie-span"><%= calories %></span>
                     </div>
-
-
                 </div>
                 <div class="info-row-btm">
                     <div class="info-item">Prot</div>
@@ -187,61 +136,11 @@
                     <div class="info-item hide-tog">Sug</div>
                     <div class="info-item hide-tog">Cho</div>
                     <div class="info-item hide-tog">Fib</div>
-                    <div class="info-cal"> </div> <!--placeholder div so top and bottom row align -->
-
-
-
+                    <div class="info-cal"> </div>
                 </div>
             <hr>
+            </div>
         </div>
-    </script>
-
-     <script type="text/template" id="totals-template">
-        <ul id="totals-ul">
-            <li>
-                Calories: <span class="right-unit"> <%= calTotal %> cal / <%= DRICal %>cal</span>
-            </li>
-            <li class="base-bar">
-                <div class="totals-bar" style="width: <%= calPercent %>"></div>
-            </li>
-            <li>
-                Fats: <span class="right-unit"> <%= fatTotal %>g  / <%= DRIFat %>g</span>
-            </li>
-            <li class="base-bar">
-                <div class="totals-bar" style="width: <%= fatPercent %>"></div>
-            </li>
-            <li>
-                Protein: <span class="right-unit"> <%= protTotal %>g  / <%= DRIProt %>g</span>
-            </li>
-            <li class="base-bar">
-                <div class="totals-bar" style="width: <%= protPercent %>"></div>
-            </li>
-
-            <li>
-                Carbs: <span class="right-unit"> <%= carbTotal %>g  / <%= DRICarb %>g</span>
-            </li>
-            <li class="base-bar">
-                <div class="totals-bar" style="width: <%= carbPercent %>"></div>
-            </li>
-            <li>
-                Sugar: <span class="right-unit"> <%= sugTotal %>g  / <%= DRISug %>g</span>
-            </li>
-            <li class="base-bar">
-                <div class="totals-bar" style="width: <%= sugPercent %>"></div>
-            </li>
-            <li>
-                Cholesterol: <span class="right-unit"><%= cholTotal %>mg  / <%= DRIChol %>mg</span>
-            </li>
-            <li class="base-bar">
-                <div class="totals-bar" style="width: <%= cholPercent %>"></div>
-            </li>
-            <li>
-                Fiber: <span class="right-unit"> <%= fibTotal %>g  / <%= DRIFib %>g</span>
-            </li>
-            <li class="base-bar">
-                <div class="totals-bar" style="width: <%= fibPercent %>"></div>
-            </li>
-        </ul>
     </script>
 
     <script type="text/template" id="totals-li-template">
@@ -251,30 +150,26 @@
         <li class="base-bar">
             <div class="totals-bar" style="width: <%= percent %>"></div>
         </li>
-
     </script>
 
     <script type="text/template" id="search-item-template">
         <div class="row">
             <div class="side-25">
-                <img src="<%= url %>" alt="food-image" class="food-image">
+                <img src="<%= imageUrl %>" alt="food-image" class="food-image">
             </div>
             <div class="side-75">
                 <a class="search-name" href="#"><%= foodName %></a>
-
                 <button class="star <%= favorited ? 'favorited' : '' %> ">★</button>
                 <div class="info-row-top">
-                    <div class="info-item"><%= protein %></div>
+                    <div class="info-item"><%= prot %></div>
                     <div class="info-item"><%= carb %></div>
                     <div class="info-item"><%= fat %></div>
                     <div class="info-item hide-tog"><%= sug %></div>
                     <div class="info-item hide-tog"><%= chol %></div>
-                    <div class="info-item hide-tog"><%= chol %></div>
+                    <div class="info-item hide-tog"><%= fib %></div>
                     <div class="info-cal">
                         <span class="search-calorie-span"><%= calories %></span>
                     </div>
-
-
                 </div>
                 <div class="info-row-btm">
                     <div class="info-item">Prot</div>
@@ -283,63 +178,51 @@
                     <div class="info-item hide-tog">Sug</div>
                     <div class="info-item hide-tog">Cho</div>
                     <div class="info-item hide-tog">Fib</div>
-                    <div class="info-cal"> </div> <!--placeholder div so top and bottom row align -->
-
-
-
+                    <div class="info-cal"> </div>
                 </div>
+            </div>
             <hr>
         </div>
     </script>
 
-
-
-
     <script type="text/template" id="date-template">
-            <span class="flanking-date" id="left-d"><%= yesterdayDateStr %></span>
-            <button id="left-btn">〈</button>
-            <span class="date-in-focus"><%= todayInFocus ? 'Today' : focalDateStr %></span>
-            <button id="right-btn" id="right-d">〉</button>
-            <span class="flanking-date"><%= tmrwDateStr %></span>
-
+        <span class="flanking-date" id="left-d"><%= yesterdayDateStr %></span>
+        <button id="left-btn">〈</button>
+        <span class="date-in-focus"><%= todayInFocus ? 'Today' : focalDateStr %></span>
+        <button id="right-btn" id="right-d">〉</button>
+        <span class="flanking-date"><%= tmrwDateStr %></span>
     </script>
 
     <script type="text/template" id="summary-template">
-     <div class="section-header">
-        <h3 class="inline">Summary</h3><button class="addFood header-btn">➕</button>
-    </div>
-    <div class="sum-row">
-        <div class="sum-col">
-            <p class="sum-sub">Calories Consumed</p>
-
-            <h1 class="big"><%= consumed %></h1>
-            <p class="sum-sub">Budget: <%= budget %></p>
-        <button class="addFood text-btn">Add Food</button>
+        <div class="section-header">
+            <h3 class="inline">Summary</h3><button class="addFood header-btn">➕</button>
         </div>
-        <div id="donut">
-            <div class="donut-text">
+        <div class="sum-row">
+            <div class="sum-col">
+                <p class="sum-sub">Calories Consumed</p>
+
+                <h1 class="big"><%= consumed %></h1>
+                <p class="sum-sub">Budget: <%= budget %></p>
+                <button class="addFood text-btn">Add Food</button>
+            </div>
+            <div id="donut">
+                <div class="donut-text">
                 <h3 class="calorie-small"> <%= left %> </h3>
                 <p> Calories <%- isOver ? 'over' : 'remaining' %></p>
             </div>
-
         </div>
     </script>
 
     <script type="text/template" id="trends-template">
-
-            <svg id="line-graph" class="<%= className %>"width="600" height="200"></svg>
-            <hr>
+        <svg id="line-graph" class="<%= className %>"width="600" height="200"></svg>
+        <hr>
     </script>
-
 
     <script src="js/lib/jquery-2.2.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.1/backbone-min.js"></script>
-    <script src="js/lib/backbone.localStorage.js"></script>
 
-    <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
-    <!-- BackboneFire -->
     <script src="https://cdn.firebase.com/libs/backbonefire/0.5.1/backbonefire.min.js"></script>
     <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
@@ -349,28 +232,18 @@
     <script src="js/d3/makeLineChart.js"></script>
     <script src="js/d3/makeDonut.js"></script>
 
-
-
     <script src="js/models/image.js"></script>
     <script src="js/models/food.js"></script>
     <script src="js/models/date.js"></script>
     <script src="js/models/plotPoint.js"></script>
-    <script src="js/models/name.js"></script>
     <script src="js/models/userInfo.js"></script>
-
-
-
 
     <script src="js/collections/foodList.js"></script>
     <script src="js/collections/masterList.js"></script>
     <script src="js/collections/searchResults.js"></script>
-    <script src="js/collections/autocompleteResults.js"></script>
-
-
 
     <script src="js/models/currentTotals.js"></script>
     <script src="js/collections/totals.js"></script>
-
 
     <script src="js/views/foodView.js"></script>
     <script src="js/views/dateView.js"></script>
@@ -383,8 +256,5 @@
     <script src="js/views/foodListView.js"></script>
 
     <script src="js/foodApp.js"></script>
-
-
-
 </body>
 </html>
