--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <div class="navbar-form navbar-right">
                     <div  class="form-group btn-div">
-                        <button class="my-btn"><a href="#summary">Add Food</a></button>
+                        <button class="my-btn"><a href="#summary">Summary </a></button>
                         <button class="my-btn"><a href="#totals">Totals</a></button>
-                        <button class="my-btn"><a href="#food-main">Food Diary</a></button>
+                        <button class="my-btn"><a href="#food-main">Tracker</a></button>
                         <button class="my-btn"><a href="#trends">Trends</a></button>
                     </div>
 
@@ -62,7 +62,8 @@
         <section id="foodApp">
             <header id="header">
                 <span class="cheesy-trophy">🏆</span>
-                <h1> Your Personal Nutrition Tracker!</h1>
+                <h1> Your Personal
+                Nutrition Tracker!</h1>
             </header>
             <hr>
             <section id="date">
@@ -82,7 +83,7 @@
             <div class="row-2">
                 <section id="food-main" class="sub-section">
                     <div class="section-header">
-                        <h3 class="inline">Food List</h3><button class="addFood header-btn">➕</button>
+                        <h3 class="inline">Food Tracker</h3><button class="addFood header-btn">➕</button>
                     </div>
                     <ul id="food-list"></ul>
                     <div>
