--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
     </script>
 
     <script type="text/template" id="trends-template">
-        <svg id="line-graph" class="<%= className %>"width="600" height="200"></svg>
+        <svg id="line-graph" class="<%= className %>"width="575" height="200"></svg>
         <hr>
     </script>
 
@@ -225,7 +225,7 @@
 
     <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/backbonefire/0.5.1/backbonefire.min.js"></script>
-    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <script src="js/lib/jquery-ui.min.js"></script>
     <script src="js/lib/bootstrap.min.js"></script>
