refactor: error handling with setTimeout, add duplicate to collection
-collections on sync clear error setTImeout message
-omitted the id attribute on creation of new food

--- a/src/index.html
+++ b/src/index.html
@@ -222,9 +222,10 @@
     <script src="js/lib/jquery-2.2.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.1/backbone-min.js"></script>
+   <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
 
-    <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/backbonefire/0.5.1/backbonefire.min.js"></script>
+
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
     <script src="js/lib/jquery-ui.min.js"></script>
@@ -232,6 +233,8 @@
 
     <script src="js/d3/makeLineChart.js"></script>
     <script src="js/d3/makeDonut.js"></script>
+
+    <script src="js/sync.js"></script>
 
     <script src="js/models/image.js"></script>
     <script src="js/models/food.js"></script>
